<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/f1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="There is no attached image or video"
                android:textSize="22sp"
                android:textStyle="bold"
                android:padding="16dp"
                android:visibility="gone" />

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/image"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/f2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:freezesText="true"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="intro"
                android:textSize="17sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/i_right"
                    app:fabSize="auto" />


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/i_left"
                    app:fabSize="auto" />

                <TextView
                    android:id="@+id/currentStep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="1/10"
                    android:textSize="20sp" />
            </RelativeLayout>

        </FrameLayout>


    </LinearLayout>


</ScrollView>